Dodanie kontrolki DataPicker