@@ -1,34 +1,30 @@
-package com.codigo.aplios.sdk.controls.calendar;
+package com.codigo.aplios.gui.control.calendar;
 
-import com.codigo.aplios.sdk.controls.calendar.FXCalendarControls.CalendarToggleButton;
-import com.codigo.aplios.sdk.controls.calendar.FXCalendarControls.NormalButton;
-import com.codigo.aplios.sdk.controls.calendar.FXCalendarControls.YearNavigatorArrowButton;
+import com.codigo.aplios.gui.control.calendar.FXCalendarControls.CalendarToggleButton;
+import com.codigo.aplios.gui.control.calendar.FXCalendarControls.NormalButton;
+import com.codigo.aplios.gui.control.calendar.FXCalendarControls.YearNavigatorArrowButton;
 
 import javafx.beans.property.SimpleIntegerProperty;
 import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
-import javafx.event.ActionEvent;
-import javafx.event.EventHandler;
 import javafx.geometry.Pos;
 import javafx.geometry.Side;
 import javafx.scene.Group;
-import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.TilePane;
 
 public class TopPane extends Group {
-	private DatePicker datePicker;
-	private StackPane monthPane;
-	private StackPane yearPane;
-	private StackPane footerPane;
-	private SimpleIntegerProperty month = new SimpleIntegerProperty();
-	private SimpleIntegerProperty year = new SimpleIntegerProperty();
-	private CalendarToggleButton[] monthButtons = new CalendarToggleButton[12];
-	private CalendarToggleButton[] yearButtons = new CalendarToggleButton[10];
-	private YearNavigatorArrowButton prevBtn;
+	private final DatePicker				datePicker;
+	private StackPane						monthPane;
+	private StackPane						yearPane;
+	private StackPane						footerPane;
+	private final SimpleIntegerProperty		month			= new SimpleIntegerProperty();
+	private final SimpleIntegerProperty		year			= new SimpleIntegerProperty();
+	private final CalendarToggleButton[]	monthButtons	= new CalendarToggleButton[12];
+	private final CalendarToggleButton[]	yearButtons		= new CalendarToggleButton[10];
+	private YearNavigatorArrowButton		prevBtn;
 
-	public TopPane(DatePicker datePicker) {
+	public TopPane(final DatePicker datePicker) {
 
 		super();
 		this.datePicker = datePicker;
@@ -36,7 +32,7 @@ public class TopPane extends Group {
 		setMonth(datePicker.getSelectedMonth());
 		setYear(datePicker.getSelectedYear());
 
-		HBox hb = new HBox();
+		final HBox hb = new HBox();
 		configureMonthPane(hb);
 		configureYearPane(hb);
 		getChildren().add(hb);
@@ -45,13 +41,10 @@ public class TopPane extends Group {
 		/*
 		 * Changes to be done in TopMonthPane on change of selectedMonth and selectedYear in DatePicker.
 		 */
-		ChangeListener<Object> listener = new ChangeListener<Object>() {
-			@Override
-			public void changed(ObservableValue<? extends Object> arg0, Object arg1, Object arg2) {
+		final ChangeListener<Object> listener = (arg0, arg1, arg2) -> {
 
-				styleTopMonthPane();
-				styleTopYearPane();
-			}
+			styleTopMonthPane();
+			styleTopYearPane();
 		};
 		monthProperty().addListener(listener);
 		yearProperty().addListener(listener);
@@ -60,22 +53,10 @@ public class TopPane extends Group {
 		 * Changes to be done in TopPane on change of selectedMonth and selectedYear in DatePicker.
 		 */
 		datePicker.selectedMonthProperty()
-				.addListener(new ChangeListener<Object>() {
-					@Override
-					public void changed(ObservableValue<? extends Object> arg0, Object arg1, Object arg2) {
-
-						setMonth((Integer) arg2);
-					}
-				});
+				.addListener((ChangeListener<Object>) (arg0, arg1, arg2) -> setMonth((Integer) arg2));
 
 		datePicker.selectedYearProperty()
-				.addListener(new ChangeListener<Object>() {
-					@Override
-					public void changed(ObservableValue<? extends Object> arg0, Object arg1, Object arg2) {
-
-						setYear((Integer) arg2);
-					}
-				});
+				.addListener((ChangeListener<Object>) (arg0, arg1, arg2) -> setYear((Integer) arg2));
 	}
 
 	/*
@@ -84,18 +65,18 @@ public class TopPane extends Group {
 	 * *************************************************************************
 	 * *******************************************
 	 */
-	private void configureMonthPane(HBox hb) {
+	private void configureMonthPane(final HBox hb) {
 
-		monthPane = new StackPane();
-		FXCalendarUtility.setBaseColorToNode(monthPane, datePicker.getBaseColor());
+		this.monthPane = new StackPane();
+		FXCalendarUtility.setBaseColorToNode(this.monthPane, this.datePicker.getBaseColor());
 
-		monthPane.setPrefWidth((datePicker.getBounds()
+		this.monthPane.setPrefWidth((this.datePicker.getBounds()
 				.getWidth() - 1) / 2);
-		monthPane.setPrefHeight(164);
-		monthPane.getStyleClass()
+		this.monthPane.setPrefHeight(164);
+		this.monthPane.getStyleClass()
 				.add("fx-calendar-top-monthpane");
 
-		TilePane tilePane = new TilePane();
+		final TilePane tilePane = new TilePane();
 		tilePane.setPrefColumns(2);
 		tilePane.setHgap(5);
 		tilePane.setVgap(8);
@@ -103,79 +84,74 @@ public class TopPane extends Group {
 
 		generateMonthButtons();
 
-		for (CalendarToggleButton btn : monthButtons) {
+		for (final CalendarToggleButton btn : this.monthButtons)
 			tilePane.getChildren()
 					.add(btn);
-		}
-		monthPane.setAlignment(Pos.CENTER);
-		monthPane.getChildren()
+		this.monthPane.setAlignment(Pos.CENTER);
+		this.monthPane.getChildren()
 				.add(tilePane);
 
 		styleTopMonthPane();
 		hb.getChildren()
-				.add(monthPane);
+				.add(this.monthPane);
 	}
 
 	private void generateMonthButtons() {
 
-		String[] months = datePicker.getFXCalendarUtility()
-				.getShortMonths(datePicker.getLocale());
+		final String[] months = this.datePicker.getFXCalendarUtility()
+				.getShortMonths(this.datePicker.getLocale());
 		int evenValue = 0;
 		int oddValue = 6;
 
 		for (int i = 0; i < 12; i++) {
 			int pos = 0;
-			if (i % 2 == 0) {
+			if ((i % 2) == 0) {
 				pos = evenValue;
 				evenValue++;
-			} else {
+			}
+			else {
 				pos = oddValue;
 				oddValue++;
 			}
 
-			final CalendarToggleButton btn = new FXCalendarControls().new CalendarToggleButton(months[pos],
-					pos);
-			btn.setBaseColor(datePicker.getBaseColor());
-			btn.setOnMouseClicked(new EventHandler<MouseEvent>() {
-				@Override
-				public void handle(MouseEvent e) {
+			final CalendarToggleButton btn = new FXCalendarControls().new CalendarToggleButton(months[pos], pos);
+			btn.setBaseColor(this.datePicker.getBaseColor());
+			btn.setOnMouseClicked(e -> {
 
-					setMonth((Integer) btn.getUserData());
-					styleTopMonthPane();
-				}
+				setMonth((Integer) btn.getUserData());
+				styleTopMonthPane();
 			});
-			monthButtons[i] = btn;
+			this.monthButtons[i] = btn;
 		}
 	}
 
 	public void setTopMonths() {
 
-		String[] months = datePicker.getFXCalendarUtility()
-				.getShortMonths(datePicker.getLocale());
+		final String[] months = this.datePicker.getFXCalendarUtility()
+				.getShortMonths(this.datePicker.getLocale());
 		int evenValue = 0;
 		int oddValue = 6;
 		for (int i = 0; i < 12; i++) {
 			int pos = 0;
-			if (i % 2 == 0) {
+			if ((i % 2) == 0) {
 				pos = evenValue;
 				evenValue++;
-			} else {
+			}
+			else {
 				pos = oddValue;
 				oddValue++;
 			}
-			monthButtons[i].setText(months[pos]);
+			this.monthButtons[i].setText(months[pos]);
 		}
 	}
 
 	public void styleTopMonthPane() {
 
-		for (int i = 0; i < 12; i++) {
-			if (getMonth() == (Integer) monthButtons[i].getUserData()) {
-				monthButtons[i].setDisable(true);
-			} else {
-				monthButtons[i].setDisable(false);
-			}
-		}
+		for (int i = 0; i < 12; i++)
+			if (getMonth() == (Integer) this.monthButtons[i].getUserData())
+				this.monthButtons[i].setDisable(true);
+			else
+				this.monthButtons[i].setDisable(false);
 	}
 
 	/*
@@ -184,94 +160,84 @@ public class TopPane extends Group {
 	 * ************************************************************************
 	 * *******************************************
 	 */
-	private void configureYearPane(HBox hb) {
+	private void configureYearPane(final HBox hb) {
 
-		yearPane = new StackPane();
-		FXCalendarUtility.setBaseColorToNode(yearPane, datePicker.getBaseColor());
+		this.yearPane = new StackPane();
+		FXCalendarUtility.setBaseColorToNode(this.yearPane, this.datePicker.getBaseColor());
 
-		yearPane.setPrefWidth(datePicker.getBounds()
+		this.yearPane.setPrefWidth(this.datePicker.getBounds()
 				.getWidth() / 2);
-		yearPane.setPrefHeight(164);
-		yearPane.getStyleClass()
+		this.yearPane.setPrefHeight(164);
+		this.yearPane.getStyleClass()
 				.add("fx-calendar-top-yearpane");
 
-		TilePane tilePane = new TilePane();
+		final TilePane tilePane = new TilePane();
 		tilePane.setPrefColumns(2);
 		tilePane.setHgap(5);
 		tilePane.setVgap(8);
 		tilePane.setTranslateX(5);
 
-		prevBtn = new FXCalendarControls().new YearNavigatorArrowButton(Side.LEFT,
-				datePicker.getBaseColor());
-		YearNavigatorArrowButton nextBtn = new FXCalendarControls().new YearNavigatorArrowButton(Side.RIGHT,
-				datePicker.getBaseColor());
+		this.prevBtn = new FXCalendarControls().new YearNavigatorArrowButton(Side.LEFT, this.datePicker.getBaseColor());
+		final YearNavigatorArrowButton nextBtn = new FXCalendarControls().new YearNavigatorArrowButton(Side.RIGHT,
+				this.datePicker.getBaseColor());
 
-		prevBtn.setOnMouseClicked(new EventHandler<MouseEvent>() {
-			@Override
-			public void handle(MouseEvent arg0) {
+		this.prevBtn.setOnMouseClicked(arg0 -> {
 
-				int start = (Integer) yearButtons[0].getUserData();
-				resetYearButtons(start - 6);
-				styleTopYearPane();
-			}
+			final int start = (Integer) TopPane.this.yearButtons[0].getUserData();
+			resetYearButtons(start - 6);
+			styleTopYearPane();
 		});
-		nextBtn.setOnMouseClicked(new EventHandler<MouseEvent>() {
-			@Override
-			public void handle(MouseEvent arg0) {
+		nextBtn.setOnMouseClicked(arg0 -> {
 
-				int start = (Integer) yearButtons[9].getUserData();
-				resetYearButtons(start + 5);
-				styleTopYearPane();
-			}
+			final int start = (Integer) TopPane.this.yearButtons[9].getUserData();
+			resetYearButtons(start + 5);
+			styleTopYearPane();
 		});
 
 		tilePane.getChildren()
-				.add(prevBtn);
+				.add(this.prevBtn);
 		tilePane.getChildren()
 				.add(nextBtn);
 
 		generateYearButtons();
-		for (CalendarToggleButton btn : yearButtons) {
+		for (final CalendarToggleButton btn : this.yearButtons)
 			tilePane.getChildren()
 					.add(btn);
-		}
 
-		yearPane.getChildren()
+		this.yearPane.getChildren()
 				.add(tilePane);
 		styleTopYearPane();
 		hb.getChildren()
-				.add(yearPane);
+				.add(this.yearPane);
 
 	}
 
 	private void generateYearButtons() {
 
-		int[] arr = getYearArray(getYear());
+		final int[] arr = getYearArray(getYear());
 		int evenValue = 0;
 		int oddValue = 5;
 
 		for (int i = 0; i < 10; i++) {
 			int pos = 0;
-			if (i % 2 == 0) {
+			if ((i % 2) == 0) {
 				pos = evenValue;
 				evenValue++;
-			} else {
+			}
+			else {
 				pos = oddValue;
 				oddValue++;
 			}
 
 			final CalendarToggleButton btn = new FXCalendarControls().new CalendarToggleButton(arr[pos] + "",
-					new Integer(arr[pos]));
-			btn.setBaseColor(datePicker.getBaseColor());
-			btn.setOnMouseClicked(new EventHandler<MouseEvent>() {
-				@Override
-				public void handle(MouseEvent e) {
+					Integer.valueOf(arr[pos]));
+			btn.setBaseColor(this.datePicker.getBaseColor());
+			btn.setOnMouseClicked(e -> {
 
-					setYear((Integer) btn.getUserData());
-					styleTopYearPane();
-				}
+				setYear((Integer) btn.getUserData());
+				styleTopYearPane();
 			});
-			yearButtons[i] = btn;
+			this.yearButtons[i] = btn;
 		}
 	}
 
@@ -281,45 +247,43 @@ public class TopPane extends Group {
 		styleTopYearPane();
 	}
 
-	public void resetYearButtons(int year) {
+	public void resetYearButtons(final int year) {
 
-		int[] arr = getYearArray(year);
+		final int[] arr = getYearArray(year);
 		int evenValue = 0;
 		int oddValue = 5;
 		for (int i = 0; i < 10; i++) {
 			int pos = 0;
-			if (i % 2 == 0) {
+			if ((i % 2) == 0) {
 				pos = evenValue;
 				evenValue++;
-			} else {
+			}
+			else {
 				pos = oddValue;
 				oddValue++;
 			}
-			yearButtons[i].setText(arr[pos] + "");
-			yearButtons[i].setUserData(new Integer(arr[pos]));
+			this.yearButtons[i].setText(arr[pos] + "");
+			this.yearButtons[i].setUserData(Integer.valueOf(arr[pos]));
 		}
 	}
 
 	public void styleTopYearPane() {
 
-		for (int i = 0; i < 10; i++) {
-			if (getYear() == (Integer) yearButtons[i].getUserData()) {
-				yearButtons[i].setDisable(true);
-			} else {
-				yearButtons[i].setDisable(false);
-			}
-		}
+		for (int i = 0; i < 10; i++)
+			if (getYear() == (Integer) this.yearButtons[i].getUserData())
+				this.yearButtons[i].setDisable(true);
+			else
+				this.yearButtons[i].setDisable(false);
 	}
 
-	private int[] getYearArray(int year) {
+	private int[] getYearArray(final int year) {
 
-		int[] arr = new int[10];
+		final int[] arr = new int[10];
 		int startYear = year > 5 ? year - 4 : 1; // Not showing negative years
-		if (year == 1) {
-			prevBtn.setDisable(true);
-		} else {
-			prevBtn.setDisable(false);
-		}
+		if (year == 1)
+			this.prevBtn.setDisable(true);
+		else
+			this.prevBtn.setDisable(false);
 
 		for (int i = 0; i < 10; i++) {
 			arr[i] = startYear;
@@ -336,83 +300,74 @@ public class TopPane extends Group {
 	 */
 	private void configureFooter() {
 
-		footerPane = new StackPane();
-		FXCalendarUtility.setBaseColorToNode(footerPane, datePicker.getBaseColor());
+		this.footerPane = new StackPane();
+		FXCalendarUtility.setBaseColorToNode(this.footerPane, this.datePicker.getBaseColor());
 
-		footerPane.setPrefWidth(datePicker.getBounds()
+		this.footerPane.setPrefWidth(this.datePicker.getBounds()
 				.getWidth());
-		footerPane.setPrefHeight(32);
-		footerPane.getStyleClass()
+		this.footerPane.setPrefHeight(32);
+		this.footerPane.getStyleClass()
 				.add("fx-calendar-footer");
 
-		NormalButton todayBtn = new FXCalendarControls().new NormalButton("Ok");
+		final NormalButton todayBtn = new FXCalendarControls().new NormalButton("Ok");
 		/**
 		 * Event triggering to set the current date of the system.
 		 */
-		todayBtn.setOnAction(new EventHandler<ActionEvent>() {
-			@Override
-			public void handle(ActionEvent event) {
+		todayBtn.setOnAction(event -> {
 
-				datePicker.setSelectedMonth(getMonth());
-				datePicker.setSelectedYear(getYear());
-				datePicker.showBasePane();
-			}
+			TopPane.this.datePicker.setSelectedMonth(getMonth());
+			TopPane.this.datePicker.setSelectedYear(getYear());
+			TopPane.this.datePicker.showBasePane();
 		});
 
-		NormalButton cancelBtn = new FXCalendarControls().new NormalButton("Cancel");
+		final NormalButton cancelBtn = new FXCalendarControls().new NormalButton("Cancel");
 		/**
 		 * Event triggering to set the current date of the system.
 		 */
-		cancelBtn.setOnAction(new EventHandler<ActionEvent>() {
-			@Override
-			public void handle(ActionEvent event) {
+		cancelBtn.setOnAction(event -> TopPane.this.datePicker.showBasePane());
 
-				datePicker.showBasePane();
-			}
-		});
-
-		HBox hb = new HBox();
+		final HBox hb = new HBox();
 		hb.setSpacing(5);
 		hb.getChildren()
 				.addAll(todayBtn, cancelBtn);
-		Group gp = new Group();
+		final Group gp = new Group();
 		gp.getChildren()
 				.add(hb);
-		footerPane.getChildren()
+		this.footerPane.getChildren()
 				.add(gp);
 
-		footerPane.setTranslateY(monthPane.getPrefHeight());
-		getChildren().add(footerPane);
+		this.footerPane.setTranslateY(this.monthPane.getPrefHeight());
+		getChildren().add(this.footerPane);
 
 	}
 
 	public int getMonth() {
 
-		return month.get();
+		return this.month.get();
 	}
 
 	public int getYear() {
 
-		return year.get();
+		return this.year.get();
 	}
 
-	public void setMonth(int month) {
+	public void setMonth(final int month) {
 
 		this.month.set(month);
 	}
 
-	public void setYear(int year) {
+	public void setYear(final int year) {
 
 		this.year.set(year);
 	}
 
 	public SimpleIntegerProperty monthProperty() {
 
-		return month;
+		return this.month;
 	}
 
 	public SimpleIntegerProperty yearProperty() {
 
-		return year;
+		return this.year;
 	}
 }
